# ccminer-cryptonight

./: .gitattributes  .gitignore  INSTALL  LICENSE  Makefile.am  Makefile.in  README  README.md  README.txt  autogen.sh  bitslice_transformations_quad.cu  ccminer.sln  ccminer.vcxproj  ccminer.vcxproj.filters  compat.h  config.sub  configure  configure.ac  configure.sh  cpu-miner.c  cpu-miner.cpp  cpuminer-config-win.h  cpuminer-config.h  cpuminer-config.h.in  cryptonight-cpu.cpp  cryptonight.c  cryptonight.h  cuda_fugue256.cu  cuda_fugue256.h  cuda_groestlcoin.cu  cuda_groestlcoin.h  cuda_helper.h  cuda_myriadgroestl.cu  cuda_nist5.cu  depcomp  elist.h  files.txt  fuguecoin.cpp  groestl_functions_quad.cu  groestlcoin.cpp  (+8 more)
JHA/: cuda_jha_compactionTest.cu  cuda_jha_keccak512.cu  jackpotcoin.cu
compat/: gettimeofday.c
compat/getopt/: getopt.h
compat/includes/openssl/: opensslconf.h
compat/includes/pthreads/: pthread.h
compat/jansson/: Makefile.am  dump.c  hashtable.c  hashtable.h  jansson.h  jansson_config.h  jansson_private.h  jansson_private_config.h  load.c  strbuffer.c  strbuffer.h  strconv.c  utf.c  utf.h  value.c
compat/libs/x64/: libcurl.lib  zlib.x64.lib  zlibstat.lib
compat/libs/x86/: libcurl.lib  zlib.x86.lib  zlibstat.lib
compat/sys/: time.h
crypto/: aesb.cpp  c_blake256.c  c_groestl.c  c_groestl.cpp  c_jh.cpp  c_keccak.c  c_keccak.cpp  c_keccak.h  c_skein.cpp  oaes_config.h  oaes_lib.c  oaes_lib.cpp  oaes_lib.h  skein_port.h
cryptonight/: cryptonight.cu  cuda_cryptonight.cu  cuda_cryptonight_aes.cu  cuda_cryptonight_blake.cu  cuda_cryptonight_core.cu  cuda_cryptonight_extra.cu  cuda_cryptonight_groestl.cu  cuda_cryptonight_jh.cu  cuda_cryptonight_keccak.cu  cuda_cryptonight_skein.cu
heavy/: cuda_blake512.cu  cuda_blake512.h  cuda_combine.cu  cuda_combine.h  cuda_groestl512.cu  cuda_groestl512.h  cuda_hefty1.cu  cuda_hefty1.h  cuda_keccak512.cu  cuda_keccak512.h  cuda_sha256.cu  cuda_sha256.h  heavy.cu
quark/: animecoin.cu  cuda_bmw512.cu  cuda_jh512.cu  cuda_quark_blake512.cu  cuda_quark_checkhash.cu  cuda_quark_compactionTest.cu  cuda_quark_groestl512.cu  cuda_quark_keccak512.cu  cuda_skein512.cu  quarkcoin.cu
sph/: groestl.c
x11/: cuda_x11_aes.cu  cuda_x11_cubehash512.cu  cuda_x11_echo.cu  cuda_x11_luffa512.cu  cuda_x11_shavite512.cu  cuda_x11_simd512.cu  simd_functions.cu  x11.cu
x13/: cuda_x13_fugue512.cu  cuda_x13_hamsi512.cu  x13.cu
